dinoco_tests/tests/dinoco/ui/fail/type_safe_update_wrong_model.stderr
error[E0308]: mismatched types
 --> tests/dinoco/ui/fail/type_safe_update_wrong_model.rs:9:37
  |
9 |     let _ = update::<User>().values(Team { id: "team-1".to_string(), name: "Platform".to_string() });
  |                              ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `User`, found `Team`
  |                              |
  |                              arguments to this method are incorrect
  |
help: the return type of this call is `Team` due to the type of the argument passed
 --> tests/dinoco/ui/fail/type_safe_update_wrong_model.rs:9:13
  |
9 |     let _ = update::<User>().values(Team { id: "team-1".to_string(), name: "Platform".to_string() });
  |             ^^^^^^^^^^^^^^^^^^^^^^^^---------------------------------------------------------------^
  |                                     |
  |                                     this argument influences the return type of `values`
note: method defined here
 --> $WORKSPACE/dinoco/src/methods/update.rs
  |
  |     pub fn values(mut self, item: M) -> Self {
  |            ^^^^^^
